force-app/main/default/objects/leadAssignmentRange__c/leadAssignmentRange__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Determines where leads that need to circumvent Sundog Lead Routing must go based on the range of their Employee Range</description>
    <label>Lead Assignment Range Rule</label>
</CustomObject>