force-app/main/default/objects/leadAssignmentRange__c/fields/Assignee_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Id__c</fullName>
    <label>Assignee Id</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>